--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #f5f5f5;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,28 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.carousel {
+  margin-bottom: 2rem;
+}
+
+.carousel-item {
+  height: 24rem;
+}
+
+.carousel-item > img {
+  background-size: cover;
+  background-position: center bottom;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.card{
+  transition: box-shadow .4s;
+}
+
+.card:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2); 
 }
