--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,7 +50,113 @@ code {
   box-shadow: 0 0 11px rgba(33,33,33,.2); 
 }
 
-.color {
-  width: 20px;
-  height: 20px;
+/* source: https://malcoded.com/posts/react-dropzone/ */
+
+.Dropzone {
+  height: 7rem;
+  width: 7rem;
+  background-color: #fff;
+  border: 2px dashed rgb(187, 186, 186);
+  border-radius: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 0.5rem;
+}
+
+.Highlight {
+  background-color: rgb(188, 185, 236);
+}
+
+.Icon {
+  opacity: 0.3;
+  height: 2rem;
+  width: 2rem;
+}
+
+.FileInput {
+  display: none;
+}
+
+/* source: https://malcoded.com/posts/react-file-upload/ */
+
+.Upload {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: flex-start;
+  text-align: left;
+  overflow: hidden;
+}
+
+.Content {
+  /* display: flex; */
+  /* flex-direction: row; */
+  padding-top: 16px;
+  box-sizing: border-box;
+  width: 100%;
+  float: right
+}
+
+.Files {
+  align-items: center;
+  justify-items: center;
+  flex: 1;
+  overflow-y: auto;
+}
+
+.Actions {
+  display: flex;
+  flex: 1;
+  width: 100%;
+  align-items: flex-end;
+  flex-direction: column;
+  margin-top: 32px;
+}
+
+.Title {
+  margin-bottom: 32px;
+  float: left;
+}
+
+.Filename {
+  margin-bottom: 8px;
+  font-size: 1rem;
+  color: #555;
+}
+
+.Row {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  height: 50px;
+  padding: 8px;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.CheckIcon {
+  opacity: 0.5;
+  margin-left: 32px;
+}
+
+.ProgressWrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+}
+
+.img-drop {
+  position: relative;
+  z-index: 2;
+}
+
+.img-preview {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
 }
